@@ -89,7 +89,7 @@ DEFINST(NOP_CF,
 )
 
 DEFINST(POP,
-	"POP %pop_count",
+	"POP %pop_count ADDR(%cf_addr)",
 	CF_WORD0, CF_WORD1, NONE,
 	CF, 14,
 	0
@@ -505,42 +505,42 @@ DEFINST(SETE_INT,
 	"%name",
 	ALU_WORD0, ALU_WORD1_OP2, NONE,
 	ALU, 58,
-	AMD_INST_FLAG_DST_UINT
+	AMD_INST_FLAG_DST_INT
 )
 
 DEFINST(SETGT_INT,
 	"%name",
 	ALU_WORD0, ALU_WORD1_OP2, NONE,
 	ALU, 59,
-	AMD_INST_FLAG_DST_UINT
+	AMD_INST_FLAG_DST_INT
 )
 
 DEFINST(SETGE_INT,
 	"%name",
 	ALU_WORD0, ALU_WORD1_OP2, NONE,
 	ALU, 60,
-	AMD_INST_FLAG_DST_UINT
+	AMD_INST_FLAG_DST_INT
 )
 
 DEFINST(SETNE_INT,
 	"%name",
 	ALU_WORD0, ALU_WORD1_OP2, NONE,
 	ALU, 61,
-	AMD_INST_FLAG_DST_UINT
+	AMD_INST_FLAG_DST_INT
 )
 
 DEFINST(SETGT_UINT,
 	"%name",
 	ALU_WORD0, ALU_WORD1_OP2, NONE,
 	ALU, 62,
-	AMD_INST_FLAG_DST_UINT
+	AMD_INST_FLAG_DST_INT
 )
 
 DEFINST(SETGE_UINT,
 	"%name",
 	ALU_WORD0, ALU_WORD1_OP2, NONE,
 	ALU, 63,
-	AMD_INST_FLAG_DST_UINT
+	AMD_INST_FLAG_DST_INT
 )
 
 DEFINST(KILLGT_UINT,
